k8s/deploy/02-namespace-configmap.yml
# Copyright 2026 watchTower
# Namespace and ConfigMap
apiVersion: v1
kind: Namespace
metadata:
  name: watchtower
  labels:
    app.kubernetes.io/instance: watchtower
    app.kubernetes.io/name: watchtower
